<resources>
    <string name="app_name">Student Resource</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_have_an_account_signin">already have an account? Sign in</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="phone">phone no</string>
    <string name="name">name</string>
    <string name="register_new_account">Register New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_register">don\'t have an Account? register</string>

    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Add Resource</string>
    <string name="course_title">Course title</string>
    <string name="course_code">Course Code</string>
    <string name="what_is_your_question">What is your Question</string>
    <string name="institution">Institution</string>


    <!-- General strings -->
    <string name="prompt_name">Name</string>


    <!-- Strings related to SignUp -->
    <string name="action_create_account">Create account</string>
    <string name="link_login">Already have an account? Login</string>

    <!-- Strings related to Login -->
    <string name="action_login">Login</string>
    <string name="link_signup">Need an account? Sign Up</string>

    <!-- Strings related to Bloquery -->
    <string name="hello_world">Hello, World!</string>

    <!-- Strings related to errors -->
    <string name="auth_failed">Authorization failed</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- ActionBar strings -->
    <string name="menu_answer">Add Answer</string>
    <string name="button_text_add_answer">Add Answer</string>

    <string name="menu_add_question">Add Question</string>
    <string name="button_text_add_question">Add Question</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_single_question">Single Question</string>
</resources>
