<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddResourceActivity">

    <Spinner
        android:id="@+id/spResourcetype"
        android:layout_width="217dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/edCourseTitle"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/username"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="119dp" />

    <EditText
        android:id="@+id/edInstitution"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/institution"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/edCourseTitle"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp" />

    <EditText
        android:id="@+id/edCourseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/course_title"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp" />


    <EditText
        android:id="@+id/edCourseCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/course_code"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/edInstitution"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp" />-

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="206dp"
        android:layout_height="88dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:paddingBottom="8dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/edCourseCode"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addResource"
        android:background="@color/colorAccent"
        android:text="Add Resource"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Tag(s) seperated with ';'"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/edDescription"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="21dp" />

    <Button
        android:id="@+id/getContent"
        android:background="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="Get Content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resourceType"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resouceName"
        android:layout_width="126dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="resourceNames"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spResourcetype" />


</android.support.constraint.ConstraintLayout>